fix: 결제 승인이 저장된 결제 키와 대조하고 실패 상태를 그대로 반환
결제 키를 주문별로 저장한다. 요청 키가 다른 주문의 키면 PAYMENT_KEY_REUSED,
이 주문에 묶이지 않은 키면 ORDER_ID_ALREADY_BOUND로 거절한다. 스펙의 「중복 요청 판정」
표를 그대로 옮긴 것이다.

실패한 결제를 재승인하면 202 PENDING을 만들어 내고 있었다. 같은 주문을 결과 조회하면
FAILED가 나와 두 엔드포인트가 다른 상태를 말했다. 스펙이 "기존 상태 반환"이라고 하므로
FAILED를 그대로 투영하고, 처리 접수가 아니므로 202가 아니라 200으로 낸다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01N21YxtjqFYGijoUGVZniis