@@ -12,8 +12,6 @@ import com.encore.ticket.payment.api.dto.PaymentStatus;
 
 final class StubPayments {
 
-    static final String PAYMENT_KEY = "tgen_20260801200700AbCdE";
-
     static final String ACCEPTED_ORDER_ID = "reservation-501-1";
 
     static final String COMPLETED_ORDER_ID = "reservation-502-1";
@@ -27,6 +25,8 @@ final class StubPayments {
     static final String FAILED_ORDER_ID = "reservation-506-1";
 
     static final String MISSING_ORDER_ID = "reservation-999-1";
+
+    static final String UNKNOWN_PAYMENT_KEY = "tgen_unknown_key";
 
     static final long EXPECTED_AMOUNT = 330_000L;
 
@@ -48,6 +48,18 @@ final class StubPayments {
     private StubPayments() {
     }
 
+    static String paymentKeyOf(String orderId) {
+        return Optional.ofNullable(PAYMENTS.get(orderId))
+                .map(StubPayment::paymentKey)
+                .orElse(null);
+    }
+
+    static boolean paymentKeyBoundToOtherOrder(String paymentKey, String orderId) {
+        return PAYMENTS.values().stream()
+                .anyMatch(payment -> payment.paymentKey().equals(paymentKey)
+                        && !payment.orderId().equals(orderId));
+    }
+
     static boolean exists(String orderId) {
         return PAYMENTS.containsKey(orderId);
     }
@@ -58,29 +70,33 @@ final class StubPayments {
                 .orElse(false);
     }
 
-    static boolean alreadyCompleted(String orderId) {
+    static boolean settled(String orderId) {
         return Optional.ofNullable(PAYMENTS.get(orderId))
-                .map(payment -> payment.paymentStatus() == PaymentStatus.COMPLETED)
+                .map(payment -> payment.paymentStatus() != PaymentStatus.PENDING)
                 .orElse(false);
     }
 
-    static PaymentConfirmResponse confirm(String paymentKey, String orderId) {
+    static String reservationStatusOf(String orderId) {
+        return Optional.ofNullable(PAYMENTS.get(orderId))
+                .map(StubPayment::reservationStatus)
+                .orElse(null);
+    }
+
+    static PaymentConfirmResponse confirm(String orderId) {
         StubPayment payment = PAYMENTS.get(orderId);
 
-        if (payment.paymentStatus() != PaymentStatus.COMPLETED) {
-            return new PaymentConfirmResponse(
-                    paymentKey, orderId, PaymentStatus.PENDING, null, null, null, null, null);
-        }
-
-        return new PaymentConfirmResponse(
-                PAYMENT_KEY,
-                orderId,
-                PaymentStatus.COMPLETED,
-                payment.reservationId(),
-                EXPECTED_AMOUNT,
-                METHOD,
-                payment.reservationStatus(),
-                APPROVED_AT);
+        return switch (payment.paymentStatus()) {
+            case PENDING -> new PaymentConfirmResponse(
+                    payment.paymentKey(), orderId, PaymentStatus.PENDING,
+                    null, null, null, null, null);
+            case FAILED -> new PaymentConfirmResponse(
+                    payment.paymentKey(), orderId, PaymentStatus.FAILED,
+                    payment.reservationId(), null, null, null, null);
+            case COMPLETED -> new PaymentConfirmResponse(
+                    payment.paymentKey(), orderId, PaymentStatus.COMPLETED,
+                    payment.reservationId(), EXPECTED_AMOUNT, METHOD,
+                    payment.reservationStatus(), APPROVED_AT);
+        };
     }
 
     static Optional<PaymentResultResponse> result(String orderId) {
@@ -90,14 +106,14 @@ final class StubPayments {
     private static PaymentResultResponse toResult(StubPayment payment) {
         return switch (payment.paymentStatus()) {
             case PENDING -> new PaymentResultResponse(
-                    PAYMENT_KEY, payment.orderId(), PaymentStatus.PENDING,
+                    payment.paymentKey(), payment.orderId(), PaymentStatus.PENDING,
                     POLL_AFTER_SECONDS, null, null, null, null, null, null, null);
             case COMPLETED -> new PaymentResultResponse(
-                    PAYMENT_KEY, payment.orderId(), PaymentStatus.COMPLETED,
+                    payment.paymentKey(), payment.orderId(), PaymentStatus.COMPLETED,
                     null, payment.reservationId(), EXPECTED_AMOUNT, METHOD,
                     payment.reservationStatus(), APPROVED_AT, null, null);
             case FAILED -> new PaymentResultResponse(
-                    PAYMENT_KEY, payment.orderId(), PaymentStatus.FAILED,
+                    payment.paymentKey(), payment.orderId(), PaymentStatus.FAILED,
                     null, payment.reservationId(), null, null, null, null,
                     FAILED_HOLD_ID, FAIL_REASON);
         };
@@ -106,26 +122,36 @@ final class StubPayments {
     private static Map<String, StubPayment> createPayments() {
         Map<String, StubPayment> payments = new LinkedHashMap<>();
         payments.put(ACCEPTED_ORDER_ID,
-                new StubPayment(ACCEPTED_ORDER_ID, 501L, PaymentStatus.PENDING, "PENDING_PAYMENT", true));
+                createPayment(ACCEPTED_ORDER_ID, 501L, PaymentStatus.PENDING, "PENDING_PAYMENT", true));
         payments.put(COMPLETED_ORDER_ID,
-                new StubPayment(COMPLETED_ORDER_ID, 502L, PaymentStatus.COMPLETED, "CONFIRMED", true));
+                createPayment(COMPLETED_ORDER_ID, 502L, PaymentStatus.COMPLETED, "CONFIRMED", true));
         payments.put(OTHER_MEMBER_ORDER_ID,
-                new StubPayment(OTHER_MEMBER_ORDER_ID, 503L, PaymentStatus.COMPLETED, "CONFIRMED", false));
+                createPayment(OTHER_MEMBER_ORDER_ID, 503L, PaymentStatus.COMPLETED, "CONFIRMED", false));
         payments.put(CANCELLED_ORDER_ID,
-                new StubPayment(CANCELLED_ORDER_ID, 504L, PaymentStatus.PENDING, "CANCELLED", true));
+                createPayment(CANCELLED_ORDER_ID, 504L, PaymentStatus.PENDING, "CANCELLED", true));
         payments.put(EXPIRED_ORDER_ID,
-                new StubPayment(EXPIRED_ORDER_ID, 505L, PaymentStatus.PENDING, "EXPIRED", true));
+                createPayment(EXPIRED_ORDER_ID, 505L, PaymentStatus.PENDING, "EXPIRED", true));
         payments.put(FAILED_ORDER_ID,
-                new StubPayment(FAILED_ORDER_ID, 506L, PaymentStatus.FAILED, "PENDING_PAYMENT", true));
-        return Map.copyOf(payments);
+                createPayment(FAILED_ORDER_ID, 506L, PaymentStatus.FAILED, "PENDING_PAYMENT", true));
+        return java.util.Collections.unmodifiableMap(payments);
     }
 
-    static String reservationStatusOf(String orderId) {
-        return PAYMENTS.get(orderId).reservationStatus();
+    private static StubPayment createPayment(
+            String orderId, long reservationId, PaymentStatus paymentStatus,
+            String reservationStatus, boolean owned) {
+
+        return new StubPayment(
+                orderId,
+                "tgen_" + orderId.replace('-', '_'),
+                reservationId,
+                paymentStatus,
+                reservationStatus,
+                owned);
     }
 
     private record StubPayment(
             String orderId,
+            String paymentKey,
             long reservationId,
             PaymentStatus paymentStatus,
             String reservationStatus,
